<?xml version="1.0"?>
<package format="2">

	<name>franka_irl_controllers</name>
	<version>0.1.0</version>
	<description>Panda Franka controllers for real world environments.</description>

	<author email="marta16@student.sdu.dk">Martin Androvich</author>
	<maintainer email="marta16@student.sdu.dk">Martin Androvich</maintainer>

	<license>TODO</license>

	<url type="website">https://github.com/HRIC-FC</url>
	<url type="repository">https://github.com/HRIC-FC/hric-system</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>pluginlib</depend>
	<depend>controller_interface</depend>
	<depend>hardware_interface</depend>
	<depend>franka_hw</depend>
	<depend>geometry_msgs</depend>
	<depend>orocos_kdl</depend>
	<depend>eigen</depend>
	<depend>libfranka</depend>

	<depend>franka_gazebo</depend>

	<exec_depend>franka_control</exec_depend>
	<exec_depend>franka_description</exec_depend>
	<exec_depend>message_runtime</exec_depend>

	<export>
		<controller_interface plugin="${prefix}/franka_irl_controllers_plugin.xml"/>
	</export>

</package>
