<?xml version="1.0"?>
<package format="2">

	<name>franka_sim_controllers</name>
	<version>0.1.0</version>
	<description>Panda Franka controllers for simulated environments.</description>

	<author email="marta16@student.sdu.dk">Martin Androvich</author>
	<maintainer email="marta16@student.sdu.dk">Martin Androvich</maintainer>

	<license>TODO</license>

	<url type="website">https://github.com/HRIC-FC</url>
	<url type="repository">https://github.com/HRIC-FC/hric-system</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>franka_gazebo</depend>
	<depend>controller_interface</depend>
	<depend>pluginlib</depend>

	<export>
		<controller_interface plugin="${prefix}/franka_sim_controllers_plugin.xml"/>
	</export>

</package>
