<?xml version="1.0"?>
<package format="2">

	<name>hric_sys</name>
	<version>0.0.0</version>
	<description>Human-Robot Interaction and Collaboration System</description>

	<author email="chfa@mmmi.sdu.dk">Cheng Feng</author>
	<author email="dscho15@student.sdu.dk">Daniel Tofte Schøn</author>
	<author email="marta16@student.sdu.dk">Martin Androvich</author>

	<maintainer email="chfa@mmmi.sdu.dk">Cheng Feng</maintainer>
	<maintainer email="dscho15@student.sdu.dk">Daniel Tofte Schøn</maintainer>
	<maintainer email="marta16@student.sdu.dk">Martin Androvich</maintainer>

	<license>TODO</license>

	<url type="website">https://github.com/HRIC-FC</url>
	<url type="repository">https://github.com/HRIC-FC/hric-system</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>data_handler</build_depend>

	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>rospy</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>
	<exec_depend>data_handler</exec_depend>

</package>