<?xml version="1.0"?>
<package format="2">

	<name>hric_sys</name>
	<version>0.0.0</version>
	<description>Human-Robot Interaction and Collaboration System</description>

	<author email="chfa@mmmi.sdu.dk">Cheng Feng</author>
	<author email="dscho15@student.sdu.dk">Daniel Tofte Schøn</author>
	<author email="marta16@student.sdu.dk">Martin Androvich</author>

	<maintainer email="chfa@mmmi.sdu.dk">Cheng Feng</maintainer>
	<maintainer email="dscho15@student.sdu.dk">Daniel Tofte Schøn</maintainer>
	<maintainer email="marta16@student.sdu.dk">Martin Androvich</maintainer>

	<license>TODO</license>

	<url type="website">https://github.com/HRIC-FC</url>
	<url type="repository">https://github.com/HRIC-FC/hric-system</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>message_generation</depend>
	<depend>message_runtime</depend>

	<depend>data_handler</depend>
	<depend>franka_gazebo</depend>

</package>