<?xml version="1.0"?>
<package format="2">

	<name>mocap_sampler</name>
	<version>0.1.0</version>
	<description>Sampling of the OptiTrack MOCAP system using NatNet SDK.</description>

	<author email="marta16@student.sdu.dk">Martin Androvich</author>
	<maintainer email="marta16@student.sdu.dk">Martin Androvich</maintainer>

	<license>TODO</license>

	<url type="website">https://github.com/HRIC-FC</url>
	<url type="repository">https://github.com/HRIC-FC/hric-system</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>geometry_msgs</depend>

</package>
