<?xml version="1.0"?>
<package format="2">

	<name>urdf_to_osim</name>
	<version>0.1.0</version>
	<description>Convert URDF models to OSIM model using KDL.</description>

	<author email="marta16@student.sdu.dk">Martin Androvich</author>
	<maintainer email="marta16@student.sdu.dk">Martin Androvich</maintainer>

	<license>TODO</license>

	<url type="website">https://github.com/HRIC-FC</url>
	<url type="repository">https://github.com/HRIC-FC/hric-system</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>xacro</depend>
	<depend>urdf</depend>
	<depend>orocos_kdl</depend>
	<depend>kdl_parser</depend>

</package>